Timbrado y Cancelado de productos completos programado.
Timbrado y cancelación de CFDI de productos completos funcional.